Edges duplicated with Duplicate Elements node not displayed in the viewport #97363

Closed
opened 2022-04-15 18:43:32 +02:00 by Faruk Ahmet · 8 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.84

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-14 19:51, hash: 48ff456a4b
Worked: N/A

Short description of error
Unlike other elements like faces and points, edges duplicated with Duplicated Elementsnode are not displayed in the viewport. They are there, as you can continue manipulating them down the node tree fine, they're just not shown.

They don't become visible until you apply the Geometry Nodes modifier, and enter into Edit Mode:

20220415193600.mp4

Exact steps for others to reproduce the error
Add a Geometry Nodes modifier to a mesh object, and drop aDuplicate Elements in between the group input and output. Set it to Edge. Nothing will be shown in the viewport.

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.84 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-14 19:51, hash: `48ff456a4b` Worked: N/A **Short description of error** Unlike other elements like faces and points, edges duplicated with *Duplicated Elements*node are not displayed in the viewport. They are there, as you can continue manipulating them down the node tree fine, they're just not shown. They don't become visible until you apply the Geometry Nodes modifier, and enter into *Edit Mode*: [20220415193600.mp4](https://archive.blender.org/developer/F13003004/20220415193600.mp4) **Exact steps for others to reproduce the error** Add a Geometry Nodes modifier to a mesh object, and drop a*Duplicate Elements* in between the group input and output. Set it to *Edge*. Nothing will be shown in the viewport.
Author

Added subscriber: @Kuboa

Added subscriber: @Kuboa

#96184 was marked as duplicate of this issue

#96184 was marked as duplicate of this issue
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey self-assigned this 2022-04-15 19:36:45 +02:00
Member

Thanks for the report!

Thanks for the report!

This issue was referenced by 089e701191

This issue was referenced by 089e7011913e35fe25be2d4b5f0f6e48f253933e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscribers: @heini, @PratikPB2123, @guitargeek

Added subscribers: @heini, @PratikPB2123, @guitargeek
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97363
No description provided.