Fix T97363: Duplicate elements node doesn't tag loose edges